fixed search bar / reset alignment

--- a/Master/static/css/style.css
+++ b/Master/static/css/style.css
@@ -68,3 +68,8 @@ table {
   th {
     cursor: pointer;
   }
+
+.search {
+    display: inline;
+    float: right;
+}
